docker jib 플러그인을 활용하는 방법을 찾은것 같다. docker에 관한 auth를 설정해주는 방법만 찾으면된다. 독감때문에 쉬자.. ㅠ